Добавил main переходник

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,61 @@
-*{
-    padding: 0;
+@font-face {
+  font-family: "Aqum";
+  src: url("/src/fonts/Aqum/aqum-2-classic.otf");
 }
+body {
+  background-color: #85CDCA;
+}
+
+.card-section {
+  font-family: "Aqum";
+  display: flex;
+  justify-content: space-between;
+  background-color: #42B29F;
+  padding: 50px;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  position: absolute;
+  border-radius: 20px;
+}
+.card-section .card {
+  font-size: 16px;
+  width: 300px;
+  height: 300px;
+  background-color: white;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+  margin: 20px;
+  text-decoration: none;
+  color: rgb(9, 36, 61);
+  background-image: url(https://7960777a-2fd1-4b07-8bbb-896e98c4659c.selcdn.net/upload/prod_add5/350/product-478350-1.jpg);
+}
+.card-section .card__img {
+  height: 250px;
+  width: 250px;
+  position: absolute;
+  top: 0;
+  left: 20px;
+  rotate: -5deg;
+}
+.card-section .card__img_r {
+  height: 200px;
+  width: 200px;
+  position: absolute;
+  bottom: -20px;
+  right: -10px;
+  rotate: 5deg;
+}
+.card-section .card:hover {
+  transform: scale(1s);
+  cursor: pointer;
+  width: 320px;
+  height: 320px;
+}
+.card-section .card:active {
+  transform: scale(0.95);
+}/*# sourceMappingURL=style.css.map */
