--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,11 @@
 @font-face {
   font-family: "Aqum";
   src: url("/src/fonts/Aqum/aqum-2-classic.otf");
+
+  @font-face {
+    font-family: "Maven Pro";
+    src: url("/src/projects/deniza-project/src/fonts/maven-pro/mavenpro.css");
+  }
 }
 
 body {
