--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,25 @@
+@import "../fonts/HelveticaNeueCyr/stylesheet.css";
+@import "../fonts/NeueMachina/stylesheet.css";
+@import "../fonts/HelveticaNeueCyr/stylesheet.css";
+@import "../fonts/NeueMachina/stylesheet.css";
+@import "../fonts/HelveticaNeueCyr/stylesheet.css";
+@import "../fonts/NeueMachina/stylesheet.css";
+@import "../fonts/HelveticaNeueCyr/stylesheet.css";
+@import "../fonts/NeueMachina/stylesheet.css";
+@import "../fonts/HelveticaNeueCyr/stylesheet.css";
+@import "../fonts/NeueMachina/stylesheet.css";
+@import "../fonts/HelveticaNeueCyr/stylesheet.css";
+@import "../fonts/NeueMachina/stylesheet.css";
+@import "../fonts/HelveticaNeueCyr/stylesheet.css";
+@import "../fonts/NeueMachina/stylesheet.css";
+@import "../fonts/HelveticaNeueCyr/stylesheet.css";
+@import "../fonts/NeueMachina/stylesheet.css";
+@import "../fonts/HelveticaNeueCyr/stylesheet.css";
+@import "../fonts/NeueMachina/stylesheet.css";
+@import "../fonts/HelveticaNeueCyr/stylesheet.css";
+@import "../fonts/NeueMachina/stylesheet.css";
+@import "../fonts/HelveticaNeueCyr/stylesheet.css";
+@import "../fonts/NeueMachina/stylesheet.css";
 * {
   padding: 0;
   margin: 0;
