--- a/src/projects/nurlan-project/src/css/style.css
+++ b/src/projects/nurlan-project/src/css/style.css
@@ -23,7 +23,7 @@ a, a:hover {
 .header__logo {
   cursor: pointer;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
 }
 .header__nav {
   font-style: normal;
@@ -32,10 +32,10 @@ a, a:hover {
   line-height: 160%;
   color: #333333;
   align-items: center;
-  gap: 74px;
+  gap: 103px;
   position: fixed;
   right: 102px;
-  z-index: 1;
+  z-index: 2;
 }
 .header__nav .header__links:hover {
   font-style: normal;
@@ -199,4 +199,389 @@ a, a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.home {
+  margin-bottom: 160px;
+}
+.home .container {
+  position: relative;
+}
+.home__title {
+  position: relative;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 140%;
+  color: #333333;
+  margin-bottom: 46px;
+}
+.home__right {
+  width: 59%;
+  position: absolute;
+  right: 12px;
+  top: 48px;
+  border-top: 2px solid #000000;
+  padding-top: 63px;
+  display: flex;
+  justify-content: flex-end;
+}
+.home__text {
+  writing-mode: vertical-rl;
+  transform: rotate(-180deg);
+}
+.home__experience-block {
+  position: absolute;
+  right: 0;
+  padding: 40px 48px;
+  background: #2C3878;
+  top: 138px;
+  right: 142px;
+  display: flex;
+  flex-direction: column;
+  gap: 57px;
+}
+.home__projects, .home__teams, .home__experience {
+  text-align: center;
+}
+.home__projects-number {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 52px;
+  line-height: 160%;
+  color: #FFFFFF;
+}
+.home__projects-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 160%;
+  color: #FFFFFF;
+}
+.home__teams-number {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 52px;
+  line-height: 160%;
+  color: #FFFFFF;
+}
+.home__teams-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 160%;
+  color: #FFFFFF;
+}
+.home__experience-number {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 52px;
+  line-height: 160%;
+  color: #FFFFFF;
+}
+.home__experience-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 160%;
+  color: #FFFFFF;
+}
+.home__img {
+  height: 513px;
+  width: 100%;
+  background: url("../images/home/home/home.png") center/cover no-repeat;
+}
+
+.about {
+  margin-bottom: 160px;
+}
+.about__subtitle {
+  position: relative;
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  color: #000000;
+}
+.about__subtitle div {
+  width: 529px;
+  background: #000;
+  position: absolute;
+  top: 9px;
+  left: 71px;
+  border-top: 2px solid #000000;
+}
+.about__title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 170%;
+  color: #333333;
+  margin-bottom: 60px;
+}
+.about__main {
+  width: 100%;
+  justify-content: space-between;
+  position: relative;
+}
+.about__main-profile {
+  position: absolute;
+  padding: 17px 52px 17px 20px;
+  background: #FFFFFF;
+  top: 27px;
+  right: 210px;
+}
+.about__main-profile-name {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 140%;
+  color: #000000;
+}
+.about__main-profile-position {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 160%;
+  color: #9C9C9C;
+  width: 133px;
+}
+.about__main-right {
+  margin-top: 197px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.about__main-right div {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 160%;
+  color: #9C9C9C;
+}
+.about__main-right a {
+  width: 142px;
+  display: inline-block;
+  padding: 14px 32px;
+  background: #2C3878;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 150%;
+  color: #FFFFFF;
+}
+
+.service {
+  margin-bottom: 172px;
+}
+.service__layers {
+  position: relative;
+  height: 828px;
+  width: 100%;
+}
+.service__top-layer {
+  position: relative;
+  max-width: 883px;
+  width: 100%;
+  z-index: 1;
+  padding: 0 40px 41px 0;
+  background: #FFFFFF;
+}
+.service__subtitle {
+  position: relative;
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  color: #000000;
+}
+.service__subtitle div {
+  width: 529px;
+  background: #000;
+  position: absolute;
+  top: 9px;
+  left: 84px;
+  border-top: 2px solid #000000;
+}
+.service__title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 170%;
+  color: #333333;
+  margin-bottom: 24px;
+}
+.service__text {
+  margin-bottom: 40px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 160%;
+  color: #9C9C9C;
+}
+.service__list {
+  justify-content: space-between;
+  margin-bottom: 34px;
+}
+.service__list-bottom {
+  margin-bottom: 0;
+}
+.service__left {
+  gap: 40px;
+}
+.service__left-number, .service__left-title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 140%;
+  color: #333333;
+}
+.service__bottom-layer {
+  position: absolute;
+  right: 0;
+  top: 304px;
+  max-width: 1076px;
+  width: 100%;
+  height: 682px;
+  background: url("../images/home/service/service.png") no-repeat;
+}
+
+.product {
+  margin-bottom: 222px;
+}
+.product__subtitle {
+  position: relative;
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  color: #000000;
+}
+.product__subtitle div {
+  width: 529px;
+  background: #000;
+  position: absolute;
+  top: 9px;
+  left: 96px;
+  border-top: 2px solid #000000;
+}
+.product__about {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 73px;
+}
+.product__about h3 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 170%;
+  color: #333333;
+}
+.product__about div {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 160%;
+  color: #9C9C9C;
+}
+.product__list {
+  justify-content: space-between;
+  margin-bottom: 43px;
+}
+.product__list-bottom {
+  margin-bottom: 0;
+}
+.product__left {
+  gap: 80px;
+}
+.product__left-container {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.product__left-number, .product__left-title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 140%;
+  color: #333333;
+}
+.product__left-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 160%;
+  color: #333333;
+}
+
+.material {
+  margin-bottom: 167px;
+}
+.material__left-subtitle {
+  position: relative;
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  color: #141414;
+}
+.material__left-subtitle div {
+  width: 529px;
+  background: #000;
+  position: absolute;
+  top: 9px;
+  left: 97px;
+  border-top: 2px solid #000000;
+}
+.material__left-title {
+  margin-bottom: 10px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 170%;
+  color: #333333;
+}
+.material__left-text {
+  margin-bottom: 23px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 160%;
+  color: #9C9C9C;
+}
+.material__left-btn {
+  display: inline-block;
+  padding: 14px 32px;
+  background: #FFFFFF;
+  border: 1px solid #3C3C3C;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 150%;
+  color: #333333;
+}
+.material__right {
+  height: 440px;
+  position: relative;
+  display: flex;
+  gap: 40px;
+}
+.material__pics-left {
+  display: flex;
+  align-items: flex-end;
+}
+.material__pics-right {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  position: absolute;
+  right: 0;
+  top: -59px;
+}
+.material__pics-right .material__pic-upper-bottom {
+  width: 195px;
 }/*# sourceMappingURL=style.css.map */
