добавила несколько страниц

--- a/src/projects/nurlan-project/src/scss/_transitionalRoom.scss
+++ b/src/projects/nurlan-project/src/scss/_transitionalRoom.scss
@@ -1,4 +1,4 @@
-.portofolio {
+.transitional {
     padding-top: 100px;
 
     &__title {
@@ -33,7 +33,7 @@
     }
 
     &__img {
-        background: url(../images/minimalistRoom/bg1.png) center/cover no-repeat;
+        background: url(../img/bg1.png) center/cover no-repeat;
         width: 100%;
         min-height: 513px;
     }
@@ -73,29 +73,29 @@
 
     &__bg {
         &-first {
-            background: url(../images/minimalistRoom/img1.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/f0/4d/7d/f04d7dce5d1f0c399d3f32410958d8d9.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;
         }
 
         &-second {
-            background: url(../images/minimalistRoom/img2.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/cb/18/83/cb18834072ec193fdde642ab4f6bc485.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;
         }
 
         &-third {
-            background: url(../images/minimalistRoom/img3.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/3d/e6/75/3de675a5dc391c4c6bdd38eb6655897d.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;
         }
         &-fourth{
-            background: url(../images/minimalistRoom/img4.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/d2/0e/c8/d20ec89c2e294abaf8090d540ef51669.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;   
         }
         &-fifth{
-            background: url(../images/minimalistRoom/img5.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/f2/f6/ae/f2f6ae80ec37b9a89c12efa7f5886a21.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;  
         }
