--- a/src/projects/nurlan-project/src/scss/_vintageRoom.scss
+++ b/src/projects/nurlan-project/src/scss/_vintageRoom.scss
@@ -1,4 +1,4 @@
-.portofolio {
+.vintage {
     padding-top: 100px;
 
     &__title {
@@ -33,7 +33,7 @@
     }
 
     &__img {
-        background: url(../images/minimalistRoom/bg1.png) center/cover no-repeat;
+        background: url(../img/bg1.png) center/cover no-repeat;
         width: 100%;
         min-height: 513px;
     }
@@ -73,29 +73,29 @@
 
     &__bg {
         &-first {
-            background: url(../images/minimalistRoom/img1.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/f4/1b/bc/f41bbc810addc775bea76de7b4ece77c.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;
         }
 
         &-second {
-            background: url(../images/minimalistRoom/img2.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/30/c2/a0/30c2a0d3b367fdeaf24f7a89d2798634.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;
         }
 
         &-third {
-            background: url(../images/minimalistRoom/img3.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/3e/d3/da/3ed3dabb7c54e7f461dd59a7469bc6ed.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;
         }
         &-fourth{
-            background: url(../images/minimalistRoom/img4.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/15/d5/4a/15d54a30d7e98c5bd1129b1006a047a7.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;   
         }
         &-fifth{
-            background: url(../images/minimalistRoom/img5.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/42/8c/cf/428ccff29f0e40591a1e46c55ac601e9.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;  
         }
