--- a/src/projects/nurlan-project/src/scss/style.scss
+++ b/src/projects/nurlan-project/src/scss/style.scss
@@ -1,44 +1,49 @@
 @import "../fonts/Poppins/stylesheet.css";
 @import "./variables";
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     list-style-type: none;
-
+    scroll-behavior: smooth;
 }
 
-a,a:hover{
+ul {
+    list-style-type: none;
+}
+
+a,
+a:hover {
     text-decoration: none;
-    color:inherit;
+    color: inherit;
 }
 
 @import "../fonts/Poppins/stylesheet.css";
 
 .header {
     margin: 40px 0 97px;
-    
+
 
     &-container {
         justify-content: space-between;
-        position:relative;
+        position: relative;
     }
 
     &__logo {
         cursor: pointer;
-        position:fixed;
-        z-index:1;
+        position: fixed;
+        z-index: 1;
     }
 
     &__nav {
         @include text(normal, 400, 16px, 160%, #333333);
         align-items: center;
         gap: 74px;
-        position:fixed;
-        right:102px;
-        z-index:1;
+        position: fixed;
+        right: 102px;
+        z-index: 1;
 
 
 
@@ -126,28 +131,28 @@ a,a:hover{
 
         &__right {
             margin-left: 205px;
-            display:flex;
-            flex-direction:column;
-            gap:25px;
+            display: flex;
+            flex-direction: column;
+            gap: 25px;
         }
 
         &__form-upper {
             width: 440px;
             align-items: center;
-            gap:10px;
+            gap: 10px;
             margin-bottom: 23px;
 
 
 
-            
+
             h3 {
-            
-               
+
+
                 width: 100%;
-            
+
                 @include text(normal, 400, 18px, 160%, #333333);
 
-                
+
             }
 
         }
@@ -173,7 +178,7 @@ a,a:hover{
                 @include text(normal, 400, 16px, 160%, #333333);
             }
 
-            input::placeholder{
+            input::placeholder {
                 @include text(normal, 400, 16px, 160%, #D9D9D9);
             }
 
@@ -186,25 +191,26 @@ a,a:hover{
 
         &__social-media {
             margin: 80px 0 84px 240px;
-            
+
 
             &-title {
-                @include text(normal,400,16px,160%,#333333);
-                margin-bottom:11px;
+                @include text(normal, 400, 16px, 160%, #333333);
+                margin-bottom: 11px;
             }
 
             &-list {
-                display:flex;
-                gap:25px;
+                display: flex;
+                gap: 25px;
+
                 a {
                     div {
-                        
+
                         width: 32px;
                         height: 32px;
                         border-radius: 50%;
                         background: #D9D9D9;
                         border: 1px solid #D9D9D9;
-                        display:flex;
+                        display: flex;
                         justify-content: center;
                         align-items: center;
                     }
@@ -226,7 +232,6 @@ a,a:hover{
 @import "./contacts";
 @import "./portfolio";
 @import "./minimalistRoom";
-
-
-
-
+@import "./modernRoom";
+@import "./vintageRoom";
+@import "./transitionalRoom";
