--- a/src/projects/nurlan-project/src/scss/_modernRoom.scss
+++ b/src/projects/nurlan-project/src/scss/_modernRoom.scss
@@ -1,4 +1,4 @@
-.portofolio {
+.modern {
     padding-top: 100px;
 
     &__title {
@@ -33,7 +33,7 @@
     }
 
     &__img {
-        background: url(../images/minimalistRoom/bg1.png) center/cover no-repeat;
+        background: url(../img/bg1.png) center/cover no-repeat;
         width: 100%;
         min-height: 513px;
     }
@@ -73,29 +73,29 @@
 
     &__bg {
         &-first {
-            background: url(../images/minimalistRoom/img1.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/2b/7c/48/2b7c48e5c5fd9e8b6e28a6a7d941e2d4.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;
         }
 
         &-second {
-            background: url(../images/minimalistRoom/img2.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/36/7e/78/367e78e6f441128ba9ceb20146d35664.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;
         }
 
         &-third {
-            background: url(../images/minimalistRoom/img3.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/47/22/de/4722dee3138cc48bb94d4781dc4de72a.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;
         }
         &-fourth{
-            background: url(../images/minimalistRoom/img4.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/da/14/51/da1451012fe83b692c98fc85cb18dc56.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;   
         }
         &-fifth{
-            background: url(../images/minimalistRoom/img5.png) center/cover no-repeat;
+            background: url(https://i.pinimg.com/564x/26/50/bd/2650bd35c15fa58d2b6327fab673d8b0.jpg) center/cover no-repeat;
             width: 100%;
             min-height: 513px;  
         }
