--- a/src/projects/nurlan-project/src/scss/_vintageRoom.scss
+++ b/src/projects/nurlan-project/src/scss/_vintageRoom.scss
@@ -33,7 +33,7 @@
     }
 
     &__img {
-        background: url(../img/bg1.png) center/cover no-repeat;
+        background: url(../images/portofolio/img2.png) center/cover no-repeat;
         width: 100%;
         min-height: 513px;
     }
